--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
+<body>
 <header>boquinhaaaaaaaaaaaaaaaaaa</header>
-<iframe>width="560" height="315"</iframe>
-<iframe width="560" height="315" 
-  </body>  src="https://www.youtube.com/embed/u0MPxhQAAMM?si=oCnG1NqFAbkuK9FV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  
+<h1>SKATEBOARD THRASHER MAGAZINE</h1>
+  <p>#Manobras Fodas</p>
+  
+<iframe width="560" height="315" <iframe width="560" height="315" src="https://www.youtube.com/embed/oLERyGJRCeA?si=UlkK_ysbeSZxYMlo"
+  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
+  picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+</body>
