--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <h1>SKATEBOARD THRASHER MAGAZINE</h1>
   <p>#Manobras Fodas</p>
   
-<iframe width="560" height="315" src="https://www.youtube.com/embed/oLERyGJRCeA?si=UlkK_ysbeSZxYMlo"
-  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
-  picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/oLERyGJRCeA?si=UlkK_ysbeSZxYMlo"title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;  picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 </body>
