--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
 
 <head>
   <link rel="stylesheet" href="styles.css">
-  <title>Aluraflix</title>
+  <title>Manobras Maneiras de Skate</title>
 </head>
